--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "todo-app",
   "private": true,
   "version": "0.0.0",
+  "description": "A modern, feature-rich todo application built with React that helps you organize your tasks efficiently.",
+  "author": "ChromoVerse",
+  "license": "MIT",
+  "homepage": "https://github.com/SiddTheCoder/NOTY.git",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -26,6 +32,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "tailwind-scrollbar": "^4.0.0",
     "vite": "^6.1.0"
